--- a/roles/acm_hive_cluster/tasks/prepare_secrets.yml
+++ b/roles/acm_hive_cluster/tasks/prepare_secrets.yml
@@ -5,7 +5,7 @@
     api_key: "{{ cluster_api_token }}"
     validate_certs: no
     definition: "{{ lookup('template', 'cloud-secret.yaml.j2') | from_yaml }}"
-  loop: "{{ managed_clusters }}"
+  loop: "{{ acm_hive_clusters }}"
   no_log: true
 
 - name: Create cluster pull-secret
@@ -14,7 +14,7 @@
     api_key: "{{ cluster_api_token }}"
     validate_certs: no
     definition: "{{ lookup('template', 'pull-secret.yaml.j2') | from_yaml }}"
-  loop: "{{ managed_clusters }}"
+  loop: "{{ acm_hive_clusters }}"
   no_log: true
 
 - name: Create cluster private secret key
@@ -23,7 +23,7 @@
     api_key: "{{ cluster_api_token }}"
     validate_certs: no
     definition: "{{ lookup('template', 'private-key-secret.yaml.j2') | from_yaml }}"
-  loop: "{{ managed_clusters }}"
+  loop: "{{ acm_hive_clusters }}"
   no_log: true
 
 - name: Create cluster install-config secret
@@ -32,7 +32,7 @@
     api_key: "{{ cluster_api_token }}"
     validate_certs: no
     definition: "{{ lookup('template', 'install-config-secret.yaml.j2') | from_yaml }}"
-  loop: "{{ managed_clusters }}"
+  loop: "{{ acm_hive_clusters }}"
 
 - name: Create vSphere CA certificate
   community.okd.k8s:
@@ -40,5 +40,5 @@
     api_key: "{{ cluster_api_token }}"
     validate_certs: no
     definition: "{{ lookup('template', 'vsphere_cert.yml.j2') | from_yaml }}"
-  loop: "{{ managed_clusters }}"
+  loop: "{{ acm_hive_clusters }}"
   when: item.platform == "vmw"
