--- a/roles/acm_hive_cluster/config-sample.yml
+++ b/roles/acm_hive_cluster/config-sample.yml
@@ -3,7 +3,7 @@ ssh_pub_key: ''
 ssh_key: |
     <ssh_private_key>
 
-managed_clusters:
+acm_hive_clusters:
 # AWS (Amazon) cluster
   - name: cluster-aws
     credentials: aws-creds  # Define the name of credentials that should be used
@@ -14,7 +14,7 @@ managed_clusters:
       machine: 10.0.0.0/16
       service: 172.30.0.0/16
       type: OVNKubernetes
-    managed_cluster_version: "4.12"  # Will fetch the last available image of defined version 
+    hive_cluster_version: "4.12"  # Will fetch the last available image of defined version 
 # GCP (Google) cluster
   - name: cluster-gcp
     credentials: gcp-creds
@@ -25,7 +25,7 @@ managed_clusters:
       machine: 10.0.0.0/16
       service: 172.30.0.0/16
       type: OpenShiftSDN
-    managed_cluster_image: quay.io/openshift-release-dev/ocp-release:4.12.7-multi  # Specific image could be specified
+    hive_cluster_image: quay.io/openshift-release-dev/ocp-release:4.12.7-multi  # Specific image could be specified
 # Azure (Microsoft) cluster
   - name: cluster-azure
     credentials: azure-creds
@@ -36,7 +36,7 @@ managed_clusters:
       machine: 10.0.0.0/16
       service: 172.30.0.0/16
       type: OVNKubernetes
-    managed_cluster_version: "4.11"
+    hive_cluster_version: "4.11"
 # VMware vSphere cluster
   - name: cluster-vmware
     credentials: vmware-creds
@@ -49,9 +49,9 @@ managed_clusters:
     network_name: "<vSphere network name>"
     network_api_vip: "<apiVIP address>"
     network_ingress_vip: "<ingressVIP address>"
-    managed_cluster_version: "4.11"
+    hive_cluster_version: "4.11"
 
-managed_clusters_credentials:
+acm_hive_clusters_credentials:
 # AWS (Amazon) credentials
   - name: aws-creds
     platform: aws
