--- a/roles/acm_hive_cluster/defaults/main.yml
+++ b/roles/acm_hive_cluster/defaults/main.yml
@@ -10,9 +10,9 @@ ssh_pub_key:
 ssh_key: |
     <private_ssh_key>
 
-# For other managed clusters platforms,
-# look for README and config-sample.yml file.
-managed_clusters:
+# For other acm hive clusters platforms,
+# refer to README and config-sample.yml file.
+acm_hive_clusters:
   - name: cluster1
     credentials: cluster1-creds
     platform: aws
@@ -22,11 +22,11 @@ managed_clusters:
       machine: 10.0.0.0/16
       service: 172.30.0.0/16
       type: OVNKubernetes
-    managed_cluster_version: "4.12"
+    hive_cluster_version: "4.12"
 
 # For other credentials types,
-# look for README and config-sample.yml file.
-managed_clusters_credentials:
+# refer to README and config-sample.yml file.
+acm_hive_clusters_credentials:
   - name: cluster1-creds
     platform: aws
     namespace: open-cluster-management-hub
