Update acm_hive_cluster references
Update documentation references of the acm_hive_cluster role from the
'managed_cluster' to 'acm_hive_cluster'.

--- a/docs/config-sample.yml
+++ b/docs/config-sample.yml
@@ -72,7 +72,7 @@ registry_secrets:
     pass: "<password>"
 
 ########################
-# MANAGED CLUSTERS role
+# ACM HIVE CLUSTERS role
 ########################
 
 acm_hive_clusters:
