--- a/roles/acm/defaults/main.yml
+++ b/roles/acm/defaults/main.yml
@@ -1,4 +1,8 @@
 ---
+# Set the cluster state of the execution
+# The state could be 'present' or 'absent'.
+state: present
+
 cluster_api:
 cluster_user: kubeadmin
 cluster_pass:
