--- a/roles/acm/tasks/destroy.yml
+++ b/roles/acm/tasks/destroy.yml
@@ -1,10 +1,63 @@
 ---
-- name: Deploy MultiClusterHub
+- name: Uninstall MultiClusterHub
   community.okd.k8s:
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
     validate_certs: no
     definition: "{{ lookup('template', 'multiclusterhub.yaml.j2') | from_yaml }}"
     state: absent
-    wait: yes
+    wait: true
+    wait_timeout: 1200
+
+- name: Delete ACM Subscription
+  community.okd.k8s:
+    host: "{{ cluster_api }}"
+    api_key: "{{ cluster_api_token }}"
+    validate_certs: no
+    definition: "{{ lookup('template', 'subscription.yaml.j2') | from_yaml }}"
+    state: absent
+    wait: true
+    wait_timeout: 1200
+
+- name: Delete ACM CatalogSource
+  community.okd.k8s:
+    host: "{{ cluster_api }}"
+    api_key: "{{ cluster_api_token }}"
+    validate_certs: no
+    definition: "{{ lookup('template', 'catalog-source.yaml.j2') | from_yaml }}"
+    state: absent
+    wait: true
+    wait_timeout: 1200
+  loop: "{{ catalog_sources }}"
+
+- name: Delete OperatorGroup
+  community.okd.k8s:
+    host: "{{ cluster_api }}"
+    api_key: "{{ cluster_api_token }}"
+    validate_certs: no
+    definition: "{{ lookup('template', 'operator-group.yaml.j2') | from_yaml }}"
+    state: absent
+    wait: true
+    wait_timeout: 1200
+
+- name: Delete ImageContentSourcePolicy
+  community.okd.k8s:
+    host: "{{ cluster_api }}"
+    api_key: "{{ cluster_api_token }}"
+    validate_certs: no
+    definition: "{{ lookup('template', 'image-content-source-policy.yaml.j2') | from_yaml }}"
+    state: absent
+    wait: true
+    wait_timeout: 1200
+
+- name: Delete "{{ acm_namespace }}" namespace
+  community.okd.k8s:
+    host: "{{ cluster_api }}"
+    api_key: "{{ cluster_api_token }}"
+    validate_certs: no
+    api_version: v1
+    kind: Namespace
+    name: "{{ acm_namespace }}"
+    state: absent
+    wait: true
     wait_timeout: 1200
