--- a/roles/acm_hive_cluster/tasks/prepare_secrets.yml
+++ b/roles/acm_hive_cluster/tasks/prepare_secrets.yml
@@ -39,6 +39,15 @@
     host: "{{ cluster_api }}"
     api_key: "{{ cluster_api_token }}"
     validate_certs: no
-    definition: "{{ lookup('template', 'vsphere_cert.yml.j2') | from_yaml }}"
+    definition: "{{ lookup('template', 'vsphere_cert.yaml.j2') | from_yaml }}"
   loop: "{{ acm_hive_clusters }}"
   when: item.platform == "vmw"
+
+- name: Create Openstack trust certificate
+  community.okd.k8s:
+    host: "{{ cluster_api }}"
+    api_key: "{{ cluster_api_token }}"
+    validate_certs: no
+    definition: "{{ lookup('template', 'openstack_trust_cert.yaml.j2') | from_yaml }}"
+  loop: "{{ acm_hive_clusters }}"
+  when: item.platform == "openstack"
