[OCP] - Modify credentials structure in OCP role
Improve credentials structure in OCP role.
Current structure of credentials specify one single cluster per cloud
platform.
```
aws:
  aws_access_key_id: <value>
  aws_secret_access_key: <value>
```

The new structure allows us to specify multiple credentials for the same
cloud platform, so different clusters from the same platform are able to
use separate credentials if needed.
```
- name: aws-creds
  platform: aws
  aws_access_key_id: <value>
  aws_secret_access_key: <value>
```

--- a/docs/config-sample.yml
+++ b/docs/config-sample.yml
@@ -31,6 +31,7 @@ clusters:
   # AWS cluster
   - name: cluster1
     base_domain: <cluster_base_domain>
+    credentials: aws-creds
     network:
       cluster: 10.128.0.0/14
       machine: 10.0.0.0/16
@@ -40,11 +41,11 @@ clusters:
       platform: aws
       region: us-east-2
       instance_type: m5.xlarge
-    creds_type: aws
     openshift_version: "4.12"  # Optional. If not specified, will deploy the latest stable version
   # GCP cluster
   - name: cluster2
     base_domain: <cluster_base_domain>
+    credentials: gcp-creds
     network:
       cluster: 10.128.0.0/14
       machine: 10.0.0.0/16
@@ -55,10 +56,10 @@ clusters:
       region: us-east1
       instance_type: n1-standard-4
       project_id: gcp_project_name
-    creds_type: gcp
   # Openstack cluster
   - name: cluster3
     base_domain: example.com
+    credentials: openstack-creds
     network:
       cluster: 10.132.0.0/14
       machine: 10.0.0.0/16
@@ -70,17 +71,18 @@ clusters:
       external_network: <openstack_external_network>
       api_floating_ip: <apiFloatingIP>
       ingress_floating_ip: <ingressFloatingIP>
-    creds_type: openstack
     openshift_version: "4.13"
 
 clusters_credentials:
   # AWS credentials
-  aws:
+  - name: aws-creds
+    platform: aws
     aws_access_key_id: <aws_access_key_id>
     aws_secret_access_key: <aws_secret_access_key>
   # GCP credentials
   # Make sure to align each line
-  gcp:
+  - name: gcp-creds
+    platform: gcp
     os_service_account_json: |
       { "type": "service_account",
         "project_id": "...",
@@ -93,7 +95,8 @@ clusters_credentials:
         "auth_provider_x509_cert_url": "...",
         "client_x509_cert_url": "..." }
   # Openstack credentials
-  openstack:
+  - name: openstack-creds
+    platform: openstack
     auth_url: <openstack_api_url>
     username: <openstack_username>
     password: <openstack_password>
