[MANAGED_OPENSHIFT] - Unify automation account in aro flow
Unify automation account name to be used accross all collection.
Account name will be - "rhacm-automation".

Update ARO flow to use that automation account name.

--- a/roles/managed_openshift/tasks/aro/check_cluster.yml
+++ b/roles/managed_openshift/tasks/aro/check_cluster.yml
@@ -5,7 +5,7 @@
 
 - name: ARO - Check if ARO cluster exists
   azure.azcollection.azure_rm_openshiftmanagedcluster_info:
-    profile: rhacm-aro
+    profile: rhacm-automation
     name: "{{ item.name }}"
     resource_group: "{{ item.name }}-rg"
   register: aro_cluster_state
