--- a/roles/managed_openshift/tasks/aro/wait_for_cluster.yml
+++ b/roles/managed_openshift/tasks/aro/wait_for_cluster.yml
@@ -1,7 +1,7 @@
 ---
 - name: ARO - Wait for cluster provisioning to complete
   azure.azcollection.azure_rm_openshiftmanagedcluster_info:
-    profile: rhacm-aro
+    profile: rhacm-automation
     name: "{{ item.name }}"
     resource_group: "{{ item.name }}-rg"
   register: aro_cluster_state
