--- a/roles/managed_openshift/tasks/aro/fetch_connection_details.yml
+++ b/roles/managed_openshift/tasks/aro/fetch_connection_details.yml
@@ -7,6 +7,14 @@
     path: "{{ working_path }}/{{ item.name }}/kubeconfig"
   no_log: true
 
+- name: ARO - Set the 'insecure-skip-tls-verify' flag if defined
+  vars:
+    flag: 'insecure-skip-tls-verify: true'
+  ansible.builtin.lineinfile:
+    path: "{{ working_path }}/{{ item.name }}/kubeconfig"
+    insertbefore: 'server:'
+    line: "{{ flag | indent(width=4, first=True) }}"
+
 - name: ARO - Fetch ARO cluster admin credentials
   azure_rm_openshiftmanagedcluster_credentials_info:
     profile: rhacm-automation
@@ -15,9 +23,41 @@
   register: cl_creds
   no_log: true
 
-- name: ARO - Create kubeadmin-credentials file
+- name: ARO - Fetch cluster URLs
+  azure.azcollection.azure_rm_openshiftmanagedcluster_info:
+    profile: rhacm-aro
+    name: "{{ item.name }}"
+    resource_group: "{{ item.name }}-rg"
+  register: aro_cluster_urls
+
+- name: ARO - Create cluster credentials file
   ansible.builtin.copy:
     content: |
+      console: {{ aro_cluster_urls.clusters.properties.consoleProfile.url }}
+      api: {{ aro_cluster_urls.clusters.properties.apiserverProfile.url }}
       username: {{ cl_creds['credentials']['kubeadminUsername'] }}
       password: {{ cl_creds['credentials']['kubeadminPassword'] }}
-    dest: "{{ working_path }}/{{ item.name }}/kubeadmin-credentials"
+    dest: "{{ working_path }}/{{ item.name }}/cluster-credentials"
+
+- name: ARO - Write cluster details into state file
+  ansible.builtin.blockinfile:
+    path: "{{ working_path }}/{{ clusters_details_file }}"
+    block: |
+      {{ item.name }}:
+        console: {{ aro_cluster_urls.clusters.properties.consoleProfile.url }}
+        api: {{ aro_cluster_urls.clusters.properties.apiserverProfile.url }}
+        user: {{ cl_creds['credentials']['kubeadminUsername'] }}
+        pass: {{ cl_creds['credentials']['kubeadminPassword'] }}
+    marker: "#{mark} {{ item.name }} details"
+    create: true
+    state: present
+
+- name: ARO - Add cluster details to the state message
+  vars:
+    msg: |
+      Deployment of {{ item.name }} cluster succeeded.
+
+      Cluster connection details could be found here: {{ working_path }}/{{ clusters_details_file }}
+      Cluster manifests files could be found here: {{ working_path }}/{{ item.name }}/
+  ansible.builtin.set_fact:
+    cl_state: "{{ cl_state | default([]) + msg.split('\n') }}"
