--- a/docs/config-sample.yml
+++ b/docs/config-sample.yml
@@ -293,3 +293,28 @@ managed_openshift_clusters_credentials:
     client_secret: <client_secret>
     tenant_id: <tenant_id>
     subscription_id: <subscription_id>
+
+##########################
+# ACM IMPORT CLUSTER role
+##########################
+
+acm_import_clusters:
+  - name: cluster1
+
+  - name: cluster2
+    # Optional. Apply cloud credentials.
+    # Taken from "clusters_credentials" var of "OCP" role.
+    cloud_creds: aws-creds
+
+  - name: cluster3
+    # Optional. Define addon flags per each cluster.
+    application_manager: false
+    argocd: false
+    policy_controller: true
+    search_collector: true
+    cert_policy_controller: false
+    iam_policy_controller: true
+
+  - name: cluster4
+    # Optional. Specify kubeconfig if cluster was not deployed by `ocp` or `managed_openshift` roles
+    kubeconfig: /path/to/kubeconfig
