[Cluster Login] - Update cluster login var name
The "cluster_login" role generates a token from the cluster for later
use.
By default, cluster details taken from the first cluster within the
"clusters_details.yml" file.
It's possible to define specific cluster to be used.

Update the var for that cluster to - cluster_login_name

--- a/roles/cluster_login/tasks/main.yml
+++ b/roles/cluster_login/tasks/main.yml
@@ -16,8 +16,8 @@
 
     - name: Set the hub to use if defined or first available
       ansible.builtin.set_fact:
-        cl_name: "{%- if cluster_name -%}
-                  {{ hub_name }}
+        cl_name: "{%- if cluster_login_name -%}
+                  {{ cluster_login_name }}
                   {%- else -%}
                   {{ cl_file | first }}
                   {%- endif -%}"
