--- a/roles/managed_openshift/tasks/rosa/delete.yml
+++ b/roles/managed_openshift/tasks/rosa/delete.yml
@@ -10,4 +10,5 @@
       --profile rhacm-automation
       delete cluster
       --cluster {{ item.name }}
+      --region {{ item.region }}
       --watch --yes
