[Managed Openshift] - Add missing "region" to rosa commands
Add "region" argument to rosa commands that was missed in the previous
patch.

--- a/roles/managed_openshift/tasks/aro/fetch_connection_details.yml
+++ b/roles/managed_openshift/tasks/aro/fetch_connection_details.yml
@@ -25,7 +25,7 @@
 
 - name: ARO - Fetch cluster URLs
   azure.azcollection.azure_rm_openshiftmanagedcluster_info:
-    profile: rhacm-aro
+    profile: rhacm-automation
     name: "{{ item.name }}"
     resource_group: "{{ item.name }}-rg"
   register: aro_cluster_urls
