--- a/docs/config-sample.yml
+++ b/docs/config-sample.yml
@@ -83,6 +83,7 @@ clusters_credentials:
   # Make sure to align each line
   - name: gcp-creds
     platform: gcp
+    project_id: gcp_project_name
     os_service_account_json: |
       { "type": "service_account",
         "project_id": "...",
@@ -108,8 +109,14 @@ clusters_credentials:
 # ACM role
 ###########
 
+# Choose one of the 2 following parameters:
 acm_version: "2.8"  # When specifying an acm version, the last available will be fetched from "quay.io:443/acm-d"
 #snapshot: In case specific snapshot should be deployed, use this variable instead of "acm_version".
+
+# Optional parameter.
+# Define when multiple "ocp" or "managed_openshift" cluster deployed.
+# Sets the cluster that should be used for acm hub install.
+cluster_login_name:
 
 # Define any registry secrets that are required
 registry_secrets:
